Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_SignedAgreement__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__ImageUrl__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Image__c</fullName>
        <formula>IF( LEN( echosign_dev1__ImageUrl__c )&gt;0, IMAGE( echosign_dev1__ImageUrl__c, &quot;Thumbnail&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Page__c</fullName>
        <label>Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Signed Agreement</relationshipLabel>
        <relationshipName>Signed_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Signed Agreement</label>
    <nameField>
        <displayFormat>AP{000000}</displayFormat>
        <label>Agreement Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signed Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>